--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "gulp": "^3.8.9",
     "gulp-concat": "^2.2.0",
+    "gulp-jade": "^0.9.0",
     "gulp-jscs": "^1.2.1",
     "gulp-jshint": "^1.8.6",
     "gulp-minify-css": "^0.3.0",
